--- a/app/views/shared/_templates.slim
+++ b/app/views/shared/_templates.slim
@@ -5,7 +5,12 @@
 
   script.home-icon(type="text/template")
     .inner
+      | <% if(!iconName.match('http://')) { %>
       .icon.dbx-handle{ style="background-image: url(/images/widgets/{{ iconName }}.png)" }
+      | <% }else{ %>
+      | <% var iconName = iconName.replace(/-/g, '.'); %>
+      .icon.dbx-handle{ style="background-image: url({{ iconName }}); background-size: 57px 57px; border-radius: 7px;" }
+      | <% } %>
       .title {{ name }}
       .invalid-icon
 
