Fixed i18n bug with repeat_vertical

--- a/app/views/builder/_templates.slim
+++ b/app/views/builder/_templates.slim
@@ -439,7 +439,7 @@ script.customize(type="text/template")
                 select name="body_bg_repeat"
                   option value="no-repeat" = t 'builder.customize.dont_repeat'
                   option value="repeat-x" = t 'builder.customize.repeat_horizontal'
-                  option value="repeat-y" = t 'builder.customize.repeat_vertically'
+                  option value="repeat-y" = t 'builder.customize.repeat_vertical'
                   option value="repeat" = t 'builder.customize.repeat_both'
             | <% } else { %>
             tr
