i18n: Account settings sidebar. Closes #296

--- a/app/views/account/_account-settings.slim
+++ b/app/views/account/_account-settings.slim
@@ -26,7 +26,7 @@ h2 =t'account_settings.title'
         td
           = f.text_field :email, :autocomplete => "off"
 
-  h3 =t'account_settings.change_password'
+  h3 =t'account_settings.change_password_optional'
   br
 
   table
