--- a/app/views/account/edit.slim
+++ b/app/views/account/edit.slim
@@ -27,7 +27,7 @@
         td
           = f.text_field :email, :autocomplete => "off"
 
-  h3 =t'account_settings.change_password'
+  h3 =t'account_settings.change_password_optional'
   br
 
   table
