Fixed typo with account settings payment_history i18n. Set min height to inner-content in account settings page.

--- a/app/views/layouts/account.slim
+++ b/app/views/layouts/account.slim
@@ -8,7 +8,7 @@
     li
       a class=active('contact',@page) href=account_path = t 'account_settings.update_contact_info'
     li
-      a class=active('payment-history',@page) href=account_payments_path = t 'account_settings.pament_history'
+      a class=active('payment-history',@page) href=account_payments_path = t 'account_settings.payment_history'
 
 .title
   = yield :title
