Updated account-settings ui. Removed br and adding padding.

--- a/public/stylesheets/account.css
+++ b/public/stylesheets/account.css
@@ -17,3 +17,5 @@
   border-top: 1px solid #b3b3b3;
   padding: 10px 20px;
   min-height: 450px; }
+  .inner-content table {
+    padding-bottom: 10px; }
