Divided account info form. Closes #298

--- a/app/views/account/change_password.slim
+++ b/app/views/account/change_password.slim
@@ -1,32 +1,12 @@
-h2 =t'account_settings.title'
+- content_for :title do
+  h1 =t'account_settings.title'
 
 = form_for @user, :url => update_account_path do |f|
   h3 =t'account_settings.current_password'
   = f.password_field :current_password
   .divider
 
-  h3 =t'account_settings.contact_information'
-  br
-
-  table
-    tbody
-      tr
-        td
-          label =t'account_settings.first_name'
-        td
-          = f.text_field :first_name
-      tr
-        td
-          label =t'account_settings.last_name'
-        td
-          = f.text_field :last_name
-      tr
-        td
-          label =t'account_settings.email'
-        td
-          = f.text_field :email, :autocomplete => "off"
-
-  h3 =t'account_settings.change_password_optional'
+  h3 = t('account_settings.change_password') + ':'
   br
 
   table
