Reversed order of links since the view defaults to change account info.

--- a/app/views/account/change_password.slim
+++ b/app/views/account/change_password.slim
@@ -6,8 +6,7 @@
   = f.password_field :current_password
   .divider
 
-  h3 = t('account_settings.change_password') + ':'
-  br
+  h3 = t('account_settings.change_password')
 
   table
     tbody
