Separate submit for change password. Closes #298

--- a/app/views/account/change_password.slim
+++ b/app/views/account/change_password.slim
@@ -1,7 +1,7 @@
 - content_for :title do
   h1 =t'account_settings.title'
 
-= form_for @user, :url => update_account_path do |f|
+= form_for @user, :url => change_password_path do |f|
   h3 =t'account_settings.current_password'
   = f.password_field :current_password
   .divider
