Updated payment options. Addresses #292

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -137,8 +137,11 @@
         input type="radio" value="12" name="months"
         label One Year - $50
         br
-        input type="radio" name="months" value="recur"
+        input type="radio" value="recur" name="months"
         label Autopay Monthly - $5/month
+        br
+        input type="radio" value="recur_yearly" name="months"
+        label Autopay Yearly - $48.76year
         br
         br
         input type="checkbox" name="terms" I agree to terms.
