--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -431,6 +431,9 @@ td.top {
 	float:left;
 	width:950px;
 	margin-top:50px;
+	margin-bottom: 6px;
+	padding-bottom: 4px;
+	border-bottom: 1px solid #b3b3b3;
 	text-align:center;
 	color:#3a3a3a;
 	font-size:13px;
@@ -438,12 +441,12 @@ td.top {
 }
 
 .footer-wrapper .languages {
-	text-align: center;
+  text-align: center;
   list-style: none;
   margin: 8px 25px 0 0;
   padding: 8px 10px 12px 0;
-  border-top: 1px solid #b3b3b3;
 }
+
 .footer-wrapper .languages li {
   display: inline;
   margin: 0 0 0 10px;
