Updated Powered by link in mobile footer.

--- a/app/views/mobile/_social-share.html.erb
+++ b/app/views/mobile/_social-share.html.erb
@@ -22,4 +22,4 @@ title = u "#{@company.name}'s Mobile Website - YoMobi"
 
 <div style="border-top:1px solid #b3b3b3;margin:8px 0"></div>
 
-<div class="powered-by">Powered by <a href="http://www.yomobi.com" target="_blank">YoMobi</a></div>
+<div class="powered-by"><a href="http://www.yomobi.com" target="_blank">Powered by YoMobi</a></div>
