Updated mobile footer CSS and fixed i18n

--- a/app/views/mobile/_social-share.html.erb
+++ b/app/views/mobile/_social-share.html.erb
@@ -4,7 +4,7 @@ title = u "#{@company.name}'s Mobile Website - YoMobi"
 %>
 
 <ul class="social-share">
-  <li style="padding-top: 5px">Share:</li>
+  <li style="padding-top: 5px"><%=t'share.share'%></li>
   <li><a rel="nofollow"  target="_blank" href="http://www.facebook.com/share.php?u=<%= curl %>&amp;t=<%= title %>" title="Facebook"><img src="/images/share/facebook.png" title="Facebook" alt="Facebook" /></a></li>
 
   <li><a rel="nofollow"  target="_blank" href="http://twitter.com/home?status=<%= title %>%20-%20<%= curl %>" title="Twitter"><img src="/images/share/twitter.png" title="Twitter" alt="Twitter" /></a></li>
