--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -23,5 +23,5 @@
       - unless @is_preview_mode
         = render 'mobile/social-share'
       erb:
-        <div class="powered-by">Powered by <a href="http://www.yomobi.com" target="_blank">YoMobi</a></div>
+        <div class="powered-by"><a href="http://www.yomobi.com" target="_blank"><%=t('powered_by.slogan')%></a></div>
 
