Made social share appear even in preview mode, added help text to site manager, updated language files

--- a/app/views/site_manager/index.html.slim
+++ b/app/views/site_manager/index.html.slim
@@ -47,6 +47,8 @@
   .site-list-wrap
     button.create =t'site_manager.create_new_site'
     h2 =t'site_manager.site_access_list'
+    p ==t'site_manager.help.site_access_list'
+    br
     ul.sites.fancy-selectable
 
   .accordian
@@ -96,9 +98,9 @@
       .status = t 'site_manager.generate_signup_key'
       .clearfix
     .content-body
+      p ==t('site_manager.help.signup_keys')
+      br
       button.gen-signup-key =t'site_manager.generate_signup_key'
-      a href="http://help.yomobi.com/Account/SignupKey" target="ymhelp"
-        img.help-bubble src="/images/ui/help-bubble.png" title=t('site_manager.help.signup_keys')
       br
       input.signup-key-input.hide type="text" readonly="readonly"
 
@@ -129,6 +131,7 @@
         input type="hidden" name="site_id" value="{{ id }}"
         input type="submit" value=t('site_manager.cancel_subscription')
       | <% } else { %>
+      p == t('site_manager.help.manage_site_type')
       h3 Select a payment option:
       form.pay action="{{ actionPath }}" method="POST" data-remote="true"
         input type="radio" value="1" name="months" checked="checked"
@@ -156,6 +159,8 @@
       .status == t 'site_manager.connected_domains', :domain_count => '<% print(domains.length); %>'
       .clearfix
     .content-body
+      p == t('site_manager.help.manage_custom_domain')
+      br
       | <% if (!isPremium) { %>
       p == t 'site_manager.not_premium_for_domains'
       | <% } else { %>
@@ -190,6 +195,8 @@
       .status == t 'site_manager.site_admins_status', :admin_count => '<% print(admins.length+1); %>'
       .clearfix
     .content-body
+      p == t('site_manager.help.manage_site_admins')
+      br    
       ul.admins.fancy-selectable
       button.add-admin    disabled="disabled" =t'site_manager.add_admin'
       button.remove-admin disabled="disabled" =t'site_manager.revoke_access'
