--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -263,6 +263,7 @@ p {
     word-wrap: break-word; } }
 
 .mobile-footer {
+  font-size: 14px;
   width: 100%;
   //min-height: 70px;
   padding: 12px 0 8px 0;
@@ -275,6 +276,14 @@ p {
   p {
     margin: 0 0 10px 0;
     padding-left: 5px; }
+  .social-share {
+    margin: 0;
+    padding: 0 0 0 5px;
+    list-style: none;
+    li {
+      float: left;
+      cursor: pointer;
+      margin-right: 12px !important; } }
   .powered-by {
     font-size: 14px;
     text-align: center; } }
@@ -288,15 +297,6 @@ p {
   input[type=text] {
     width: 100px !important;
     margin: 5px 0 0 0 !important; } }
-
-.social-share {
-  margin: 0;
-  padding: 0 0 0 5px;
-  list-style: none;
-  li {
-    float: left;
-    cursor: pointer;
-    margin-right: 12px; } }
 
 .clearfix {
   clear: both; }
