--- a/app/views/shared/_mobile-render.slim
+++ b/app/views/shared/_mobile-render.slim
@@ -12,6 +12,9 @@
   - unless @is_preview_mode || @company.premium?
     .ad-bar
       = render 'mobile/adsense' if Rails.env == 'production'
+  - if @company.premium? == false && @is_preview_mode == true
+    .ad-bar
+      = render 'mobile/yomobi-upgrade-ad'
 #canvas
   #home.page
     #home-widgets.content.dbx-group
