--- a/public/stylesheets/sass/builder.scss
+++ b/public/stylesheets/sass/builder.scss
@@ -119,8 +119,8 @@ div.wysiwyg ul.toolbar {
 
 // builder related
 
-.ad-bar {
-  display: none !important; }
+#emulator-wrapper .ad-bar {
+  display: none; }
 
 .home-icon.editing {
   //background: url(/images/ui/highlight.png) no-repeat 0px 1px !important;
