--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -542,6 +542,12 @@ pre {
   }
 }
 
+.yomobi-upgrade-ad {
+  padding: 1px;
+  color: white;
+  a { color: white; }
+}
+
 // WYSIWYG Photo styling
 img.yo-left  { padding: 3px 10px 0px 0px; }
 img.yo-right { padding: 3px 0px 0px 10px; }
