--- a/public/stylesheets/builder.css
+++ b/public/stylesheets/builder.css
@@ -102,8 +102,8 @@ div.wysiwyg ul.toolbar {
   #content .leaf-content h1 {
     padding-left: 0px; }
 
-.ad-bar {
-  display: none !important; }
+#emulator-wrapper .ad-bar {
+  display: none; }
 
 .home-icon.editing {
   background: #a4bec6 no-repeat 0px 1px !important;
