--- a/public/stylesheets/sass/mobile.scss
+++ b/public/stylesheets/sass/mobile.scss
@@ -543,8 +543,11 @@ pre {
 }
 
 .yomobi-upgrade-ad {
+  height: 48px;
   padding: 1px;
   color: white;
+  line-height: 48px;
+  h3 { font-size: 16px; }
   a { color: white; }
 }
 
