--- a/public/stylesheets/sass/site-manager.scss
+++ b/public/stylesheets/sass/site-manager.scss
@@ -15,6 +15,15 @@ input[type="button"]:hover, input[type="submit"]:hover, button:hover {
   color: yellow;
 }
 
+input[type="button"]:disabled, input[type="submit"]:disabled, button:disabled {
+  color: gray;
+  background: #ddd;
+  border-color: gray;
+  cursor: default;
+}
+
+
+
 input[type="checkbox"] {
   vertical-align: middle;
 }
